# chatgpt_wechat_bot

./: README.md  package-lock.json  package.json  pyproject.toml  update_chatgptcode.sh
src/: ding-dong-bot.ts  main.ts
